--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-size: 100% 100%;
+    /* background-size: 100% auto; */
+    background-size:  100% 100%;
+    background-position: center;
 }
 a:link {
   color: green;
